# X3270

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.sh  package_all.sh  package_intel.sh
.github/workflows/: release.yml
docs/: CNAME  _config.yml  index.html
resources/: AppIcon.icns  Info.plist
src/core/: DataStream5250Parser.cpp  DataStream5250Parser.h  DataStreamParser.cpp  DataStreamParser.h  EbcdicCodec.cpp  EbcdicCodec.h  FileTransfer.cpp  FileTransfer.h  GocaParser.cpp  GocaParser.h  GraphicsBuffer.cpp  GraphicsBuffer.h  KeyboardState.cpp  KeyboardState.h  ScreenBuffer.cpp  ScreenBuffer.h  TLSTransport.cpp  TLSTransport.h  TN3270Session.cpp  TN3270Session.h  TN5250Session.cpp  TN5250Session.h  TerminalModel.h
src/ui/: AppDelegate.h  AppDelegate.mm  ConnectionWindowController.h  ConnectionWindowController.mm  DebugWindowController.h  DebugWindowController.mm  PreferencesWindowController.h  PreferencesWindowController.mm  ShortcutsWindowController.h  ShortcutsWindowController.mm  TerminalView.h  TerminalView.mm  TerminalWindowController.h  TerminalWindowController.mm  main.mm
